Added Mongo db full text search behind a apir /search/products?query-""
