# Backend/products/docs/swagger.yaml
@@ -36,7 +36,7 @@ definitions:
         example: University of Florida
         type: string
       productPostDate:
-        description: Product post date (MM-DD-YYYY)
+        description: Product post date (time.Time)
         example: 02-20-2025
         type: string
       productPrice:
@@ -66,6 +66,15 @@ paths:
       - application/json
       description: Fetch all products from the system, regardless of the user ID.
         If no products are found, an error is returned.
+      parameters:
+      - description: ID of the last product to fetch
+        in: query
+        name: lastId
+        type: string
+      - description: Number of products to fetch (default is 10)
+        in: query
+        name: limit
+        type: integer
       produces:
       - application/json
       responses:
@@ -156,6 +165,14 @@ paths:
         in: path
         name: UserId
         required: true
+        type: integer
+      - description: ID of the last product to fetch
+        in: query
+        name: lastID
+        type: string
+      - description: Number of products to fetch (default is 10)
+        in: query
+        name: limit
         type: integer
       produces:
       - application/json
@@ -256,6 +273,43 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Update a product by user ID and product ID
+      tags:
+      - Products
+  /search/products:
+    get:
+      consumes:
+      - application/json
+      description: Search for products in the system based on the query string. Returns
+        a list of products matching the search criteria, with a limit on the number
+        of results.
+      parameters:
+      - description: Search query for products
+        in: query
+        name: query
+        required: true
+        type: string
+      - description: Number of products to fetch (default is 10)
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of products matching the search query
+          schema:
+            items:
+              $ref: '#/definitions/model.Product'
+            type: array
+        "400":
+          description: Search query is required
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      summary: Search for products based on a query
       tags:
       - Products
 swagger: "2.0"
